--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,3 @@
 KERMANY=../kermany
-SRINIVASAN=D:\data\2014_BOE_Srinivasan\Publication_Dataset
-OCT500=D:\data\OCT500
+SRINIVASAN=../3dataset/1
+OCT500=../3dataset/2
